# pymyIO

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.agents/skills/engine-sync/: SKILL.md
.agents/skills/engine-sync/agents/: openai.yaml
.claude/rules/: path-2-credibility.md
.codex/: session-handoff.md
.do/: app.yaml
.github/workflows/: engine-bump-close.yaml  pages.yaml  release.yaml  tests.yaml
app/: README.md  app.py  requirements.txt
docs/: api.md  charts.md  index.md  installation.md  quickstart.md  roadmap.md
docs/hosts/: _release-checklist.md  classic-notebook.md  colab.md  index.md  jupyterlab.md  marimo.md  panel.md  quarto.md  shiny.md  solara.md  vscode.md
examples/: quickstart.py
md/design/: shiny-jupyter-integration-contract.md  shiny-jupyter-integration.md  stats-transforms-contract.md  stats-transforms.md
md/design/archive/: shiny-jupyter-integration.md  stats-transforms.md
md/todo/: shiny-jupyter-integration.md  stats-transforms.md
src/pymyio/: __init__.py  chart.py  standalone.py  tools.py  transforms.py  widget.py
src/pymyio/shiny/: __init__.py
src/pymyio/static/: myIOapi.js  style.css  widget.js
src/pymyio/static/lib/: d3-hexbin.js  d3-sankey.min.js  d3.min.js
tests/: conftest.py  test_chart_config.py  test_jupyter_smoke.py  test_packaging.py  test_parity.py  test_public_api_freeze.py  test_regression_shinywidgets_footgun.py  test_shiny_app.py  test_shiny_integration.py  test_standalone_html.py  test_tools.py  test_transform_density.py  test_transform_fit_distribution.py  test_transform_loess.py  test_transform_lttb.py  test_transform_pairwise_test.py  test_transform_smooth.py  test_transform_survfit.py  test_transforms_json_safety.py  test_wheel_contents.py  test_widget_js_contract.py  test_widget_runtime_script_count.py
