[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymyio"
version = "0.1.0"
description = "Python bindings for the myIO d3.js chart library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Morton Analytics" }]
keywords = ["d3", "visualization", "charts", "jupyter", "anywidget", "myio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "anywidget>=0.9",
  "traitlets>=5.9",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
polars = ["polars>=0.20"]
dev = [
  "pytest>=7",
  "pandas>=1.5",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/mortonanalytics/pymyIO"
Source = "https://github.com/mortonanalytics/pymyIO"
"Sister R package" = "https://github.com/mortonanalytics/myIO"

[tool.hatch.build.targets.wheel]
packages = ["src/pymyio"]

[tool.hatch.build.targets.wheel.shared-data]
"src/pymyio/static" = "share/pymyio/static"

[tool.ruff]
line-length = 100
target-version = "py39"
